--- a/src/components/weekContainer/weekContainer.css
+++ b/src/components/weekContainer/weekContainer.css
@@ -1,6 +1,6 @@
 .card-list-container {
     display: flex;
-    width: 50%;
+    /* width: 50%; */
     overflow: scroll;
 }
 
